# Teamtalk

./: README.md  build_install_deploy.md
android/: README.md  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/anim/: dialog_in.xml  dialog_out.xml
android/app/src/main/res/drawable/: cutoffrule.xml  fragment_weixin_framlayout_bg.xml  fragment_weixin_voice_button.xml  tt_list_item_bk.xml
android/app/src/main/res/layout/: activity_more.xml  transfer_file_show_item_layout.xml  tt_activity_login.xml  tt_activity_login1.xml  tt_activity_main.xml  tt_activity_message.xml  tt_fragment_activity_userinfo.xml  tt_fragment_base.xml  tt_fragment_chat.xml  (+7 more)
android/mgimlibs/: build.gradle
auto_setup/gcc_setup/: gcc_setup.sh
auto_setup/mariadb/conf/: ttopen.sql
auto_setup/nginx_php/php/: setup.sh
docker/: .dockerignore  .gitignore  Dockerfile_run  README.md  build.sh  docker.md  docker_build.sh  docker_run.sh
docker/supervisor_confs/: login_server.ini  route_server.ini
ios/: Podfile
ios/TeamTalk/: AppDelegate.m  Info.plist
ios/TeamTalk.xcodeproj/: project.pbxproj
ios/TeamTalk.xcodeproj/xcshareddata/xcschemes/: TeamTalk.xcscheme
ios/TeamTalk/Config/: MTTConfig.h
ios/TeamTalk/Entity/: MTTGroupEntity.m  MTTMessageEntity.h  MTTMessageEntity.mm  MTTSessionEntity.h  MTTSessionEntity.m  MTTUserEntity.m
ios/TeamTalk/Exist/AQGridView/: AQGridViewAnimatorItem.m  AQGridViewCell.m  AQGridViewUpdateInfo.m
ios/TeamTalk/Exist/GPB/objcpb/: ImBaseDefine.pbobjc.h  ImBaseDefine.pbobjc.m  ImBuddy.pbobjc.h  ImBuddy.pbobjc.m  ImFile.pbobjc.h  ImFile.pbobjc.m  ImGroup.pbobjc.h  ImGroup.pbobjc.m  ImLogin.pbobjc.h  ImLogin.pbobjc.m  ImMessage.pbobjc.h  ImMessage.pbobjc.m  ImOther.pbobjc.h  ImOther.pbobjc.m  ImServer.pbobjc.h  ImServer.pbobjc.m  ImSwitchService.pbobjc.h  ImSwitchService.pbobjc.m
ios/TeamTalk/Exist/Opus/opustool/: opusaudio.c
ios/TeamTalk/Exist/Voice/manager/: Decapsulator.m  Encapsulator.m  RawAudioDataPlayer.m  RecorderManager.mm
ios/TeamTalk/GlobalData/RuntimeStatus/: RuntimeStatus.m
ios/TeamTalk/Images.xcassets/AppIcon.appiconset/: Contents.json
ios/TeamTalk/Module/Login/: LoginModule.m
ios/TeamTalk/Module/Session/: SessionModule.m
ios/TeamTalk/Module/TCPAPI/: DDAddMemberToGroupAPI.m  DDAllUserAPI.m  DDCreateGroupAPI.m  DDDeleteMemberFromGroupAPI.m  DDFixedGroupAPI.m  DDUserDetailInfoAPI.m  GetLatestMsgId.m  GetMsgByMsgIDsAPI.m  GetRecentSession.mm  HasOfflineFileAPI.h  HasOfflineFileAPI.m  LogoutAPI.m  MTTChangeNightModeAPI.m  MTTKickPCClientAPI.m  MTTNightModeAPI.m  MTTShakeAPI.m  MTTSignatureAPI.m  MTTUsersStatAPI.h  MTTUsersStatAPI.m  MsgReadACKAPI.m  RemoveSessionAPI.m  SendPushTokenAPI.m  ShieldGroupMessageAPI.m
ios/TeamTalk/Util/: MTTUtil.m
ios/TeamTalk/ViewController/Chatting/Chatting/: ChattingMainViewController.m
ios/TeamTalk/ViewController/Chatting/ChattingEdit/: DDChattingEditViewController.m
ios/TeamTalk/ViewController/Chatting/Group/: EditGroupViewController.m
ios/TeamTalk/ViewController/Contacts/: ContactsViewController.m  PublicProfileViewControll.m  SearchContentViewController.m
ios/TeamTalk/ViewController/Find/: FinderViewController.m
ios/TeamTalk/ViewController/Login/: MTTLoginViewController.m
ios/TeamTalk/ViewController/My/: MTTMyViewController.m
ios/TeamTalk/ViewController/RecentContacts/: RecentUsersViewController.m
ios/TeamTalk/ViewController/RecentContacts/Cells/: RecentUserCell.m
ios/TeamTalk/ViewController/Root/: MTTRootViewController.m
ios/TeamTalk/ViewController/Search/: MTTSearchDetailViewControll.m
mac/: Podfile
mac/TeamTalk/: DDAppDelegate.m  TeamTalk-Info.plist
mac/TeamTalk.xcodeproj/: project.pbxproj
mac/TeamTalk/MessageReview/: DDMessagesReviewContentViewController.m
mac/TeamTalk/interface/mainWindow/: DDMainWindowController.m  FMSearchTokenField.m
mac/TeamTalk/modules/Chatting/: MessageShowView.m
mac/TeamTalk/modules/Main/: DDRecentContactsViewController.h  DDRecentContactsViewController.m  DDRecentContactsViewController.xib
mac/TeamTalk/modules/OriginEntity/: DDOriginEntity.h  DDOriginEntity.m
mac/TeamTalk/modules/OriginEntity/Grouyp/: MTGroupEntity.h  MTGroupEntity.m
mac/TeamTalk/modules/OriginEntity/User/: MTUserEntity.h  MTUserEntity.m
mac/TeamTalk/modules/login/: DDLoginManager.m
pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Group.proto  IM.Login.proto  IM.Message.proto  IM.Server.proto  create.sh
php/application/controllers/: group.php
server/run/: reboot_teamtalk.sh  restart.sh
server/src/: .gitignore  README.md  build.sh  build_ubuntu.sh  mac_make_log4cxx.sh  make_hiredis.sh  make_log4cxx.sh  make_mariadb.sh  make_protobuf.sh  ubuntu_install.md  ubuntu_install_mysql.sh  ubuntu_make_log4cxx.sh
server/src/base/: BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  ConfigFileReader.cpp  HttpClient.cpp  SSLSocket.cpp  ThreadPool.cpp  imconn.cpp  imconn.h  netlib.cpp  netlib.h  util.h  version.h
server/src/base/pb/protocol/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.File.pb.cc  IM.File.pb.h  IM.Group.pb.cc  IM.Group.pb.h  IM.Login.pb.cc  IM.Login.pb.h  IM.Message.pb.cc  IM.Message.pb.h  IM.Other.pb.cc  IM.Other.pb.h  IM.Server.pb.cc  IM.Server.pb.h  IM.SwitchService.pb.cc  IM.SwitchService.pb.h
server/src/base/slog/: slog_api.h
server/src/db_proxy_server/: .gitignore  CMakeLists.txt  DBPool.cpp  DBPool.h  db_proxy_server.cpp  dbproxyserver.conf
server/src/db_proxy_server/business/: GroupModel.cpp  InterLogin.cpp
server/src/file_server/: CMakeLists.txt
server/src/http_msg_server/: CMakeLists.txt  DBServConn.cpp  DBServConn.h  HttpPdu.cpp  HttpPdu.h  HttpQuery.cpp  HttpQuery.h  http_msg_server.cpp
server/src/log4cxx/: simpledateformat.h
server/src/login_server/: CMakeLists.txt
server/src/msfs/: CMakeLists.txt  FileManager.cpp
server/src/msg_server/: CMakeLists.txt  DBServConn.cpp  MsgConn.cpp  MsgConn.h  msgserver.conf
server/src/push_server/: CMakeLists.txt
server/src/route_server/: CMakeLists.txt
server/src/test/: Client.cpp
(+51 files in other folders)
